--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,3 +3,10 @@ services:
     image: be:0.0.1-SNAPSHOT
     container_name: backend
     restart: always
+  
+  frontend:
+    image: frontend:latest
+    container_name: frontend
+    ports:
+      - "3000:3000"
+    restart: always
