--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ deploy-be:
 # [FE 빌드] - Docker 환경이면 충분
 build-fe:
   stage: build
-  image: docker:stable
+  image: docker:26-cli
   tags:
     - aws-ec2
   rules:
