--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -1,3 +1,22 @@
 spring:
   application:
     name: be
+
+  datasource:
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/okkul_db}
+    username: ${DATABASE_USERNAME:postgres}
+    password: ${DATABASE_PASSWORD:postgres}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate.ddl-auto: create
+    show-sql: true
+    properties.hibernate.format_sql: true
+    defer-datasource-initialization: true
+
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_DATABASE:0}
+      password: ${REDIS_PASSWORD:}
