--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -20,3 +20,25 @@ spring:
       port: ${REDIS_PORT:6379}
       database: ${REDIS_DATABASE:0}
       password: ${REDIS_PASSWORD:}
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID:google-client-id}
+            client-secret: ${GOOGLE_CLIENT_SECRET:google-client-secret}
+            scope:
+              - email
+              - profile
+
+# 어플리케이션 설정
+app:
+  frontend:
+    url: ${FRONTEND_URL:http://localhost:3000}
+  backend:
+    url: ${BACKEND_URL:http://localhost:8080}
+  jwt:
+    secret: ${JWT_SECRET:your-jwt-secret-key-change-this-sure-to-change-this}
+    access-token-expiration-minutes: 30
+    refresh-token-expiration-days: 7
