[BE] cicd: Swagger Servers http 스키마 수정
nginx x-forward-headers 수정

--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -32,6 +32,9 @@ spring:
               - email
               - profile
 
+server:
+  forward-headers-strategy: framework
+
 # 어플리케이션 설정
 app:
   frontend:
