[BE] feat: JWT 발급 및 검증 기능

--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -43,5 +43,5 @@ app:
     url: ${BACKEND_URL:http://localhost:8080}
   jwt:
     secret: ${JWT_SECRET:your-jwt-secret-key-change-this-sure-to-change-this}
-    access-token-expiration-minutes: 30
-    refresh-token-expiration-days: 7
+    access-token-expiration: 15m
+    refresh-token-expiration: 7d
