--- a/be/build.gradle
+++ b/be/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    implementation "io.jsonwebtoken:jjwt-api:0.13.0"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.13.0"
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
