--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,15 @@ services:
     networks:
       - server-tools_default
 
+  ai-service:
+    image: ai:${TAG}
+    container_name: okkul-ai
+    restart: always
+    ports:
+      - "8000:8000"
+    networks:
+      - server-tools_default
+
 networks:
   server-tools_default:
     external: true
