--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     properties.hibernate.format_sql: true
     defer-datasource-initialization: true
 
+  sql:
+    init:
+      mode: always
+
   data:
     redis:
       host: ${REDIS_HOST:localhost}
