--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "generate-api": "swagger-typescript-api generate -p https://api.dev.okkul.site/v3/api-docs -o ./src/api -n myApi.ts --modular -d --extract-request-body --extract-response-body --extract-response-error --axios"
   },
   "dependencies": {
+    "axios": "^1.13.3",
     "pinia": "^3.0.4",
     "swagger-typescript-api": "^13.2.16",
     "vue": "^3.5.26",
