--- a/be/build.gradle
+++ b/be/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.minio:minio:8.5.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation "io.jsonwebtoken:jjwt-api:0.13.0"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"
