--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,9 +34,8 @@ ai-service:
     container_name: okkul-ai-${TAG}
     restart: always
     networks:
-      server-tools_default:
-        aliases:
-          - okkul-ai-develop  # http://okkul-ai-develop:8000으로 호출 가능
+      - server-tools_default
+
 
 networks:
   server-tools_default:
