[FE] fix:설문페이지

--- a/fe/package.json
+++ b/fe/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:dev": "vite --mode development",
+    "dev:cicd": "vite --mode production",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
