--- a/fe/package.json
+++ b/fe/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.13.3",
+    "generate-api": "^1.0.4",
     "pinia": "^3.0.4",
     "swagger-typescript-api": "^13.2.16",
     "vue": "^3.5.26",
