[FE] feat:mock데이터 기반 개발

--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "dev:dev": "vite --mode development",
+    "dev:mock": "vite --mode mock",
     "dev:cicd": "vite --mode production",
     "build": "vite build",
     "preview": "vite preview",
