[BE] feat: 유형별 연습 히스토리 API 구현

--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -49,6 +49,9 @@ spring:
 server:
   forward-headers-strategy: framework
 
+springdoc:
+  override-with-generic-response: false
+
 # 어플리케이션 설정
 app:
   frontend:
