--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.13.3",
+    "firebase": "^12.8.0",
     "generate-api": "^1.0.4",
     "pinia": "^3.0.4",
     "swagger-typescript-api": "^13.2.16",
