--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,16 +54,17 @@ build-fe:
   script:
     - echo "⚛️ Frontend 빌드 시작..."
     - cd fe
-    - docker build \
+    - >
+      docker build
+      --build-arg PROFILE=$CI_COMMIT_BRANCH
+      --build-arg VITE_FIREBASE_API_KEY=$VITE_FIREBASE_API_KEY
+      --build-arg VITE_FIREBASE_AUTH_DOMAIN=$VITE_FIREBASE_AUTH_DOMAIN
+      --build-arg VITE_FIREBASE_PROJECT_ID=$VITE_FIREBASE_PROJECT_ID
+      --build-arg VITE_FIREBASE_STORAGE_BUCKET=$VITE_FIREBASE_STORAGE_BUCKET
+      --build-arg VITE_FIREBASE_MESSAGING_SENDER_ID=$VITE_FIREBASE_MESSAGING_SENDER_ID
+      --build-arg VITE_FIREBASE_APP_ID=$VITE_FIREBASE_APP_ID
+      --build-arg VITE_FIREBASE_MEASUREMENT_ID=$VITE_FIREBASE_MEASUREMENT_ID
       -t frontend:$CI_COMMIT_REF_SLUG
-      --build-arg PROFILE=$CI_COMMIT_BRANCH \
-      --build-arg VITE_FIREBASE_API_KEY=$VITE_FIREBASE_API_KEY \
-      --build-arg VITE_FIREBASE_AUTH_DOMAIN=$VITE_FIREBASE_AUTH_DOMAIN \
-      --build-arg VITE_FIREBASE_PROJECT_ID=$VITE_FIREBASE_PROJECT_ID \
-      --build-arg VITE_FIREBASE_STORAGE_BUCKET=$VITE_FIREBASE_STORAGE_BUCKET \
-      --build-arg VITE_FIREBASE_MESSAGING_SENDER_ID=$VITE_FIREBASE_MESSAGING_SENDER_ID \
-      --build-arg VITE_FIREBASE_APP_ID=$VITE_FIREBASE_APP_ID \
-      --build-arg VITE_FIREBASE_MEASUREMENT_ID=$VITE_FIREBASE_MEASUREMENT_ID \
       .
 
 # [AI 빌드] - Python Docker 환경
