--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,20 +52,20 @@ build-fe:
       changes:
         - fe/**/* # FE 폴더가 변했을 때만 실행
   script:
-    - echo "⚛️ Frontend 빌드 시작..."
+    - echo "⚛️ Frontend 빌드 시작.."
     - cd fe
-    - >
-      docker build
-      --build-arg PROFILE=$CI_COMMIT_BRANCH
-      --build-arg VITE_FIREBASE_API_KEY=$VITE_FIREBASE_API_KEY
-      --build-arg VITE_FIREBASE_AUTH_DOMAIN=$VITE_FIREBASE_AUTH_DOMAIN
-      --build-arg VITE_FIREBASE_PROJECT_ID=$VITE_FIREBASE_PROJECT_ID
-      --build-arg VITE_FIREBASE_STORAGE_BUCKET=$VITE_FIREBASE_STORAGE_BUCKET
-      --build-arg VITE_FIREBASE_MESSAGING_SENDER_ID=$VITE_FIREBASE_MESSAGING_SENDER_ID
-      --build-arg VITE_FIREBASE_APP_ID=$VITE_FIREBASE_APP_ID
-      --build-arg VITE_FIREBASE_MEASUREMENT_ID=$VITE_FIREBASE_MEASUREMENT_ID
-      -t frontend:$CI_COMMIT_REF_SLUG
-      .
+    # 1. .env 파일 생성
+    - TARGET_VAR_NAME="${CI_COMMIT_BRANCH}_env"
+    - eval "echo \"\$$TARGET_VAR_NAME\"" > .env
+    # 2. 브랜치에 따라 빌드 모드(PROFILE) 결정
+    - |
+      if [ "$CI_COMMIT_BRANCH" = "master" ]; then
+        BUILD_MODE="production"
+      else
+        BUILD_MODE="$CI_COMMIT_BRANCH" # develop, cicd 브랜치는 이름 그대로 모드로 사용
+      fi
+      echo "빌드 모드 결정: $BUILD_MODE"ㄴ
+      docker build --build-arg PROFILE=$BUILD_MODE -t frontend:$CI_COMMIT_REF_SLUG .
 
 # [AI 빌드] - Python Docker 환경
 build-ai:
