--- a/fe/Dockerfile
+++ b/fe/Dockerfile
@@ -12,22 +12,13 @@ COPY package*.json ./
 # 의존성 설치
 RUN npm install
 
-# 소스 코드 복사
+# 소스 코드 복사 (이제 .env 파일도 함께 복사됩니다)
 COPY . .
 
 # 빌드 인자(Argument) 설정 (기본값: production)
 ARG PROFILE=production
 
-# GitLab CI/CD 등 외부에서 주입받을 환경 변수 ARG로 선언
-ARG VITE_FIREBASE_API_KEY
-ARG VITE_FIREBASE_AUTH_DOMAIN
-ARG VITE_FIREBASE_PROJECT_ID
-ARG VITE_FIREBASE_STORAGE_BUCKET
-ARG VITE_FIREBASE_MESSAGING_SENDER_ID
-ARG VITE_FIREBASE_APP_ID
-ARG VITE_FIREBASE_MEASUREMENT_ID
-
-# 빌드 실행 (브랜치명을 mode로 전달: cicd, develop, master)
+# 빌드 실행 (Vite가 .env 파일을 자동으로 읽음)
 RUN npm run build -- --mode ${PROFILE}
 
 # --------------------------------------------------------
@@ -38,7 +29,7 @@ FROM nginx:alpine as production-stage
 # 1단계에서 빌드된 결과물(dist 폴더)만 Nginx의 서빙 폴더로 복사
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 
-# SPA(Single Page App) 라우팅 처리를 위한 설정 파일 복사 (아래 2번에서 생성)
+# SPA(Single Page App) 라우팅 처리를 위한 설정 파일 복사
 COPY default.conf /etc/nginx/conf.d/default.conf
 
 # 80 포트 노출
